--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -18,6 +18,8 @@ $normal-darker-gray-color: #7E7E7E !important;
 
 $dark-red-color: #891F16 !important;
 $accented-red-color: #E04031 !important;
+$text-red-color: #A4271B !important;
+$ant-menu-color: #E13F30 !important;
 
 $slider-base-dot-color: #D9D9D9 !important;
 $timeline-reel-color: #D9D9D9 !important;
@@ -35,5 +37,4 @@ $hovered-btn-filter-color: drop-shadow(0 2px 15px rgba(61, 0, 0, .25)) !importan
 $card-scrollbar-track-color: #DEDCDC !important;
 $modal-hover-color: #ECE9E9 !important;
 $burger-menu-color: #7F7F7F !important;
-$ant-menu-color: #E13F30 !important;
 $input-outline-color: #E6E4E4 !important;
