--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -22,10 +22,11 @@
       @include mut.positioned-as(absolute, $left: 94%, $top: -27px);
       @include mut.circular(90px, c.$pure-white-color);
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-      
+
       &:hover {
         background-color: c.$modal-hover-color;
       }
+
       .ant-modal-close-x {
         display: flex;
         justify-content: center;
@@ -46,12 +47,14 @@
   > h3 {
     @include mut.with-font($font-weight: 300);
   }
+
   .enterSum{
     @include mut.rem-margined($top: 32px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 15px, $font-weight: 500);
     line-height: 18px;
     color: #A3A3A3;
   }
+
   > .amountInput {
     @include mut.rem-margined($bottom: 35px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 64px, $font-weight: 500);
@@ -59,6 +62,12 @@
 
     color: c.$darkish-gray-color;
     border: none;
+
+    &:not(.active) {     
+      text-decoration-line: underline;
+      text-decoration-thickness: 2px;
+      text-underline-offset: 10px;
+    }
 
     &.active {
       color: c.$pure-black-color;
@@ -104,7 +113,39 @@
   .donatesInputContainer {
     @include mut.sized(679px, 64px);
     @include mut.flexed($justify-content: space-between, $gap: 25px);
-    margin: f.pxToRem(34px) 0;
+    margin: f.pxToRem(12px) 0;
+
+    >.checkbox-borderline {
+      border: none;
+      display: flex;
+      align-items: center;
+    
+      .ant-checkbox-input {
+        width: 23px;
+        height: 23px;
+      }
+      
+      span{
+        display: inline-block;
+        vertical-align: middle;
+             
+        .ant-checkbox-inner {
+          width: 24px !important;
+          height: 24px !important;
+        }
+  
+        &:last-child {
+          font-family: 'Roboto';
+          font-style: normal;
+          font-weight: 300;
+          font-size: 15px;
+          line-height: 18px;
+          padding-inline-start: 16px;
+          height: 24px;
+          padding-top: 1vh;
+        }
+      }
+    }
 
     > * {
       @include mut.full-rounded(11px);
@@ -134,14 +175,15 @@
 @media screen and (max-width: 1024px) {
   .donatesModal {
     @include mut.sizedImportant(748px, 272px);
-    
+
     &.ant-modal {
       .ant-modal-content {
         @include mut.full-rounded(16px, $overflow: visible);
-         .ant-modal-body{
-            width: 100%;
-            padding: f.pxToRem(16px);
-          }
+
+        .ant-modal-body{
+          width: 100%;
+          padding: f.pxToRem(16px);
+        }
       }
 
       .ant-modal-close{
@@ -156,37 +198,42 @@
         text-align: center;
         letter-spacing: 0.005em;
       }
+
       > h3{
         @include mut.with-font($font-size: 14px, $font-weight: 300);
         @include mut.rem-margined($top: 10px, $bottom: 16px);
       }
+
       .enterSum{
         @include mut.rem-margined($top: 0);
         @include mut.with-font(ft.$closer-text-font, $font-size: 10px, $font-weight: 500);
         line-height: 13px;
       }
+
       .amountInput{
         @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
         @include mut.rem-margined($top: 2px, $bottom: 16px);
         border-bottom: 2px solid #A3A3A3;
         max-width: 100%;
       }
-  
+
       .donatesBtnContainer{
         @include mut.sized(408px, 100%);
         margin-bottom: f.pxToRem(16px);
-  
+
         > * {
           width: f.pxToRem(120px) !important;
           height: f.pxToRem(37px) !important;
-          
+
           > span{
             @include mut.with-font(ft.$closer-text-font, $font-size: 16px, $font-weight: 350);
           }
         }
-      } 
+      }
+
       .donatesDonateBtn {
         @include mut.sized(100%, 46px);
+
         > span{
           @include mut.with-font(ft.$roboto-font, $font-size: 14px, $font-weight: 500);
           line-height: 16px;
@@ -194,6 +241,7 @@
           text-transform: none;
         }
       }
+
       .donatesInputContainer{
         display: none;
       }
@@ -202,12 +250,12 @@
 }
 
 @media screen and (max-width: 480px) {
-   .donatesModal .donatesModalContent .donatesBtnContainer {
-        @include mut.sized(308px, 100%);
-        @include mut.flexed($direction: row-reverse, $justify-content: space-between, $gap: 4px);
-        
-        > * {
-          width: f.pxToRem(100px) !important;
-        }
+  .donatesModal .donatesModalContent .donatesBtnContainer {
+    @include mut.sized(308px, 100%);
+    @include mut.flexed($direction: row-reverse, $justify-content: space-between, $gap: 4px);
+
+    > * {
+      width: f.pxToRem(100px) !important;
     }
+  }
 }
