--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -73,14 +73,12 @@
 and (max-width: 1024px){
 
   .interestingFactsSliderContainer {
-  // @include mut.sized(100%, 100%); //80
-
     .slick-list {  
       @include mut.rem-padded(120px);
     }
     .slick-dots {
       margin-bottom: 200px;
-      text-align: center; /* horizontally centers the element */
+      text-align: center;
       justify-content: center;
       padding: 0;
       margin: 0;
@@ -88,25 +86,17 @@ and (max-width: 1024px){
       text-align: center;
 
       
-      // @include mut.rem-margined(-30p x,-30px, -30px, -30px);
-      
     }
-    // ul .slick-dots{
-    //   // padding: 0;
-    //    margin: 0;
-    // }
     li{
-      text-align: center; /* horizontally centers the element */
+      text-align: center;
       justify-content: center;
-      // padding: 0;
-      // margin: 0;
       list-style: none;
       text-align: center;
         @include mut.sized(8px, 8px);
     
     }
     li button{
-      text-align: center; /* horizontally centers the element */
+      text-align: center; 
       justify-content: center;
       padding: 0;
 
@@ -115,12 +105,9 @@ and (max-width: 1024px){
         @include mut.sized(8px, 8px);
     }
     li button:before {
-        // margin: 12px;
-        text-align: center; /* horizontally centers the element */
+
+        text-align: center; 
         justify-content: center;
-        // padding: 5px;
-        // margin: 5px;
-    // left: -1.5rem;
         left: -270% !important;
 
           @include mut.rem-margined($right:5px, $left:5px);
@@ -135,15 +122,10 @@ and (max-width: 1024px){
   }    
   .interestingFactSlide {
    
-    //  @include mut.sized(233px, 275px);//250px
-    // @include mut.sized(90%, 260px);//250px
-    // @include mut.sized(58%); //80
-
     @include mut.full-rounded(20px);
     
      .slideImage {
-      //  @include mut.sized(100%, 160px);//200px
-       @include mut.sized(100%, 132px);//200px
+       @include mut.sized(100%, 132px);
        @include mut.rounded(20px, 20px);
 
       img{
@@ -152,9 +134,6 @@ and (max-width: 1024px){
      }
      .slideText {
        @include mut.sized(100%, 105px);
-      // @include mut.sized(100%, 165px);
-      //  @include mut.rem-padded(1px, 2px, 5px, 0px);
-      // @include mut.rem-margined(1px, 16px, 24px, 16px);
       @include mut.rounded(0);
 
        .heading {
@@ -163,13 +142,8 @@ and (max-width: 1024px){
          line-height: f.pxToEm(17px);
        }
        .mainText {
-        //  @include mut.rem-padded(0, 20px, 0px, 20px);
         @include mut.rem-padded(0, 12px, 0px, 12px);
-        // max-width: 316px;
-        // max-height: 144px;
-
          @include mut.with-font($font-weight: 300, $font-size: 10px);
-        //  line-height: f.pxToEm(18px);
          line-height: f.pxToEm(15.5px);
 
        }
@@ -177,9 +151,7 @@ and (max-width: 1024px){
   
 
      .readMoreParagraph {
-      //  @include mut.rem-padded(10px, 20px, 0px, 20px);
       @include mut.rem-padded(6px, 20px, 0px, 12px);
-
       @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
      }
   } 
@@ -189,41 +161,25 @@ and (max-width: 1024px){
 
 @media screen
 and (min-width: 768px) and (max-width: 1000px) {
-// and (max-width: 768px) {
-
-
   .interestingFactsSliderContainer{
     @include mut.sized(100%, 100%);
     .slick-list {  
       @include mut.rem-padded(120px);
     }
     .slick-track {
-      // @include mut.sized(500%);
-
       @include mut.flexed($align-items: flex-start, $gap: 10px);
       @include mut.rem-margined($left: -4px);
-    }//   .slick-slider {
+    }
     .slick-dots {
         margin-bottom: 200px;
     }
   }
 
   .interestingFactSlide {
-   
-    //  @include mut.sized(233px, 275px);//250px
-    // @include mut.sized(90%, 260px);//250px
-    // @include mut.sized(75%); //80
-   
-
-    // @include mut.sized(206px, 231px);//то еквівалент 312 і 344
-    // @include mut.sized(205px,240px);// 344px
-
-
     @include mut.full-rounded(20px);
     
      .slideImage {
-      //  @include mut.sized(100%, 160px);//200px
-       @include mut.sized(100%, 132px);//200px
+       @include mut.sized(100%, 132px);
        @include mut.rounded(20px, 20px);
 
       img{
@@ -234,23 +190,14 @@ and (min-width: 768px) and (max-width: 1000px) {
        @include mut.sized(100%, 106px);
        @include mut.rounded(0);
 
-      // @include mut.sized(100%, 165px);
-      //  @include mut.rem-padded(1px, 2px, 5px, 0px);
-      // @include mut.rem-margined(1px, 16px, 24px, 16px);
-
        .heading {
         @include mut.rem-padded(6px, 20px, 4px, 12px);
          @include mut.with-font($font-weight: 500, $font-size: 12px);
          line-height: f.pxToEm(17px);
        }
        .mainText {
-        //  @include mut.rem-padded(0, 20px, 0px, 20px);
         @include mut.rem-padded(0, 12px, 0px, 12px);
-        // max-width: 316px;
-        // max-height: 144px;
-
          @include mut.with-font($font-weight: 300, $font-size: 10px);
-        //  line-height: f.pxToEm(18px);
          line-height: f.pxToEm(15.5px);
 
        }
@@ -258,9 +205,7 @@ and (min-width: 768px) and (max-width: 1000px) {
   
 
      .readMoreParagraph {
-      //  @include mut.rem-padded(10px, 20px, 0px, 20px);
       @include mut.rem-padded(6px, 20px, 0px, 12px);
-
       @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
      }
   } 
@@ -269,45 +214,25 @@ and (min-width: 768px) and (max-width: 1000px) {
 
  
 @media screen and (max-width: 480px){ 
-
-  // .slick-slide {
-  //   margin-left: 5.15px;
-  // }
-//   .slick-slide {
-//     // padding-left: 10px;
-//     // padding-right: 0;
-// }
-
-  //   margin-right: -11px; /* adjust this value to your desired gap */
-  // }
   .interestingFactSlide {
-    @include mut.sized(210px,240px);// 344px
-    // @include mut.sized(70%);// 344px
+    @include mut.sized(210px,240px);
     @include mut.full-rounded(20px);
     overflow: visible;
 
   
       .slideImage {
-        // @include mut.sized(100%, 188px);
         @include mut.sized(100%);//
         @include mut.rounded(20px, 20px);
 
       }
       .slideText {
         @include mut.full-rounded(0px);
-         @include mut.sized(100%, 103px);//, 155px
+         @include mut.sized(100%, 103px);
          overflow: visible;
 
-         //  @include mut.rem-padded(4px, 20px, 0px, 20px);
          .heading {
-          //  @include mut.rem-padded(0,0,0, 15px);
           @include mut.with-font($font-weight: 500, $font-size: 12px);
           line-height: f.pxToEm(12px);
-//           font-family: 'Roboto';
-// font-style: normal;
-// font-weight: 500;
-// font-size: 12px;
-// line-height: 16px;
         }
         .mainText {
           @include mut.with-font($font-weight: 300, $font-size: 10px);
@@ -324,7 +249,6 @@ and (min-width: 768px) and (max-width: 1000px) {
 
 @media screen and (max-width: 1024px){ 
   .interestingFactSlide {
-        @include mut.sized(205px,240px);// 344px
+        @include mut.sized(205px,240px);
   }
 }
-
