--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -5,8 +5,12 @@
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
 
 .donatesModal {
-  width: f.pxToRem(1012px) !important;
-  height: f.pxToRem(621px);
+  width: f.pxToRem(896px) !important;
+  height: f.pxToRem(597px);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &.ant-modal {
     .ant-modal-content {
@@ -39,6 +43,11 @@
 .donatesModalContent {
   @include mut.flex-centered($direction: column);
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   > h1 {
     color: c.$accented-red-color;
     @include mut.with-font(ft.$closer-text-font, $font-size: 40px, $font-weight: 500);
@@ -55,16 +64,22 @@
     color: #A3A3A3;
   }
 
-  > .amountInput {
+  > .donateInputContainer{
+    display: flex;
+    justify-content: center;
+    
+  }
+  .amountInput {
     @include mut.rem-margined($bottom: 35px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 64px, $font-weight: 500);
-    text-align: center;
-
+    text-align: right;
+    --input-width: 42px;
     color: c.$darkish-gray-color;
     border: none;
+    padding: 0;
 
     &:not(.active) {     
-      text-decoration-line: underline;
+      text-decoration-line: underline;  
       text-decoration-thickness: 2px;
       text-underline-offset: 10px;
     }
@@ -79,8 +94,12 @@
     }
   }
 
+  .GryvnaSymbol{
+    width: fit-content !important;
+  }
+
   .donatesBtnContainer {
-    @include mut.sized(679px, 64px);
+    @include mut.sized(686px, 64px);
     @include mut.flexed($direction: row-reverse, $justify-content: space-between, $gap: 25px);
 
     > * {
@@ -88,6 +107,7 @@
       @include mut.full-rounded(11px);
       @include mut.flex-centered();
 
+      border-radius: 15px !important;
       border: 3px solid c.$dark-red-color;
       @include vnd.vendored(transition, 'background-color .75s ease');
       filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.19));
@@ -111,7 +131,7 @@
   }
 
   .donatesInputContainer {
-    @include mut.sized(679px, 64px);
+    @include mut.sized(686px, 64px);
     @include mut.flexed($justify-content: space-between, $gap: 25px);
     margin: f.pxToRem(12px) 0;
 
@@ -128,6 +148,7 @@
       span{
         display: inline-block;
         vertical-align: middle;
+        
              
         .ant-checkbox-inner {
           width: 24px !important;
@@ -143,6 +164,7 @@
           padding-inline-start: 16px;
           height: 24px;
           padding-top: 1vh;
+          
         }
       }
     }
@@ -155,13 +177,18 @@
   }
 
   .donatesDonateBtn {
-    @include mut.sized(231px, 73px);
+    @include mut.sized(212px, 73px);
     @include mut.full-rounded(11px);
     background-color: c.$accented-red-color;
     box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
+    border-radius: 15px !important;
 
+    &:disabled{
+      background-color: c.$lighter-gray-color;
+        color: c.$pure-white-color;
+      cursor: pointer;
+    }
     > span {
-      text-transform: uppercase;
       @include mut.with-font($font-size: 20px, /*$font-weight: 500*/);
       color: c.$pure-white-color;
     }
@@ -174,7 +201,9 @@
 
 @media screen and (max-width: 1024px) {
   .donatesModal {
-    @include mut.sizedImportant(748px, 272px);
+    @include mut.sizedImportant(340px, 316px);
+    display: flex;
+    justify-content: center;
 
     &.ant-modal {
       .ant-modal-content {
@@ -201,29 +230,42 @@
 
       > h3{
         @include mut.with-font($font-size: 14px, $font-weight: 300);
-        @include mut.rem-margined($top: 10px, $bottom: 16px);
+        @include mut.rem-margined($top: 10px, $bottom: 10px);
       }
 
       .enterSum{
         @include mut.rem-margined($top: 0);
         @include mut.with-font(ft.$closer-text-font, $font-size: 10px, $font-weight: 500);
-        line-height: 13px;
+        line-height: 15px;
       }
 
       .amountInput{
         @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
-        @include mut.rem-margined($top: 2px, $bottom: 16px);
-        border-bottom: 2px solid #A3A3A3;
+        @include mut.rem-margined($top: 0px, $bottom: 16px);
+
+        display: flex;
+        align-items: center;
+        height: 42px;
         max-width: 100%;
+
+        &:not(.active) {     
+          text-decoration-line: underline;  
+          text-decoration-thickness: 2px;
+          text-underline-offset: 2px;
+        }
       }
-
+      .GryvnaSymbol{
+        padding-top: 1px !important;
+      }
       .donatesBtnContainer{
-        @include mut.sized(408px, 100%);
-        margin-bottom: f.pxToRem(16px);
-
+        @include mut.sized(308px, 100%);
+        
+        gap: 0;
         > * {
-          width: f.pxToRem(120px) !important;
+          width: f.pxToRem(100px) !important;
           height: f.pxToRem(37px) !important;
+          border-radius: 11px !important;
+          border: 2px solid c.$dark-red-color;
 
           > span{
             @include mut.with-font(ft.$closer-text-font, $font-size: 16px, $font-weight: 350);
@@ -239,11 +281,33 @@
           line-height: 16px;
           color: #FFFFFF;
           text-transform: none;
+          border-radius: 10px !important;
         }
       }
 
       .donatesInputContainer{
-        display: none;
+        @include mut.sized(100%, 28px);
+        margin: 16px;
+        
+        >.checkbox-borderline {
+          display: flex;
+          overflow: visible !important;
+
+          > span{
+            display: inline-block;
+            vertical-align: middle;
+      
+            &:last-child {
+              height: 28px;
+              padding-top: 2px;
+              font-family: 'Roboto';
+              font-style: normal;
+              font-weight: 500;
+              font-size: 12px;
+              line-height: 14px;
+            }
+          }
+        }
       }
     }
   }
