renamed div class for better perception

--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -64,7 +64,7 @@
     color: #A3A3A3;
   }
 
-  > .donateInputContainer{
+  > .donateInputContainerWrapper{
     display: flex;
     justify-content: center;
     
