almost fully adaptive for tablets

--- a/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
@@ -3,7 +3,6 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 
-
 .supportUsPageWrapper {
     padding: 110px 12.5% 0;
     width: 100%;
@@ -83,7 +82,7 @@
         }
 
         .donateWindow {
-            @include mut.sizedImportant($height: 525px, $width: 590px);
+            @include mut.sized($height: 525px, $width: 590px);
             vertical-align: top;
             background: c.$pure-white-color;
             
@@ -94,7 +93,6 @@
     
     .donateSubBlocks {
         @include mut.sized($height: 351px, $width: 1200px);
-
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -108,6 +106,7 @@
                 line-height: 48px;
                 text-align: center;
             }
+
             .content {
                 @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
                 @include mut.sized($height: 230px);
@@ -184,5 +183,116 @@
     .titleSmall {
         @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
         line-height: 42px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .supportUsPageWrapper {
+        padding: 84px 9px 0;
+
+        .heading {
+            .titleBig {
+                @include mut.rem-margined($bottom: 20px);
+                font-size: 54px;
+                line-height: 71px;
+            }
+
+            .titleSmall {
+                @include mut.rem-margined($bottom: 12px);
+                font-size: 16px;
+                line-height: 21.12px;
+            }
+
+            .text {
+                font-size: 14px;
+                line-height: 16.41px;
+            }
+        }
+
+        .mainBlock {
+            .donatesPurposeBlock {
+                @include mut.rem-padded($right: 24px);
+                width: calc(100vw - 340px);
+
+                .heading {
+                    font-size: 20px;
+                    line-height: 26px;
+                }
+
+                .purposeList {
+                    li {
+                        span {
+                            font-size: 14px;
+                            line-height: 16.41px;
+                        }
+                    }
+                }
+
+                .purposeBottomText {
+                    font-size: 14px;
+                    line-height: 16.41px;
+                }
+            }
+            
+            .donateWindow {
+                @include mut.sized($width: 340px, $height: 343px);
+            }
+        }
+
+        .donateSubBlocks {
+            @include mut.sized($height: 257px, $width: 748px);
+            margin: 40px calc((100vw - 784px) / 2) 0;
+
+            gap: 12px;
+            
+            .block {
+                width: 240px !important;
+
+                .heading {
+                    font-size: 24px;
+                    line-height: 31.68px;
+                }
+
+                .content {
+                    @include mut.sized($height: 147px);
+                    @include mut.rem-margined($top: 12px, $bottom: 12px);
+
+                    font-size: 16px;
+                    line-height: 21.47px;
+
+                    .accountInfo {
+                        @include mut.rem-margined($top: 12px);
+                        line-height: pxToRem(16.41px);
+    
+                        .thickerText {
+                            @include mut.rem-margined($top: 8px);
+                            font-size: 12px;
+                            font-weight: 500;
+                            line-height: 14.06px;
+                        }
+                    }
+                }
+
+                svg path {
+                    //@include mut.sized($width: 151px, $height: 151px);
+                    height: 151px;
+                    width: 151px;
+                }
+            }
+        }
+
+        .bottomText {
+            @include mut.rem-padded($top: 40px, $bottom: 40px);
+            font-size: 20px;
+            line-height: 26.4px;
+        }
+
+        .supportButton {
+            height: 46px;
+            border-radius: 10px;
+
+            font-size: 14px;
+            line-height: 16.41px;
+        }
     }
 }
